--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script src="https://unpkg.com/react-image/umd/index.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
